1st batch of fixes, stuck on css

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   display: table;
 }
 
+/* repair here to put the pixelated background on deeper layer
 .background {
   width: 13vw;
   height: 98vh;
@@ -25,6 +26,8 @@ body {
   text-align: right;
 }
 
+change this to flex?
+
 .container {
   display: grid;
   grid-template-columns: 13vw 1fr 13vw;
@@ -38,8 +41,10 @@ body {
 
 .appContainer { 
   grid-area: appContainer;
-  text-align: center;
-}
+  repair here to put all of the stuff behind modal in the middle use flex?
+} */
+
+
 
 .appInnerContainer {
   display: inline-block;
